--- a/src/translation/es/global.json
+++ b/src/translation/es/global.json
@@ -4,7 +4,8 @@
         "button2": "Servicios",
         "button3": "Funcionamiento",
         "button4": "Galería",
-        "button5": "Contacto"
+        "button5": "Contacto",
+        "button6": "BikeAlert"
     },
     "header": {
         "button-learn": "Aprende Más"
@@ -177,6 +178,13 @@
         "how": "¿Como funciona?",
         "paragraph": "Somos la mejor opción que tendrás en la palma de tu mano para esos momentos peligrosos o de posible amenaza, en los que requieras alertar a toda la comunidad y hacer saber que te encuentras en potencial peligro y con esto lograr persuadir la posible agresión o ataque"
     },
+    "bikeAlert": {
+        "title": "BikeAlert",
+        "about": "¿Qué es BikeAlert?",
+        "paragraph1": "BikeAlert es la nueva funcionalidad de BodegAlert pensada en apoyar y mejorar la seguridad de los delivery, mediante el uso de nuestra plataforma tecnológica disponible en las mejores tiendas de aplicaciones móviles",
+        "how": "¿Como funciona?",
+        "paragraph2": "El funcionamiento es el mismo, independiente si te registras como bodega o como delivery. (Si deseas explorar el procedimiento para usar nuestra app, dirígete a la sección de galería)"
+    },
     "DynamicPage": [
         {
             "img": "img/team/01.jpg",
@@ -188,5 +196,6 @@
             "name": "Mike Doe",
             "job": "Senior Designer"
         }
-    ]
+    ],
+    "terms": "Términos y condiciones"
 }
